--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "api:dev": "ts-node-dev --respawn --project carrix-backend/apps/api/tsconfig.app.json --require tsconfig-paths/register carrix-backend/apps/api/src/main.ts",
+    "api:build": "tsc -p carrix-backend/apps/api/tsconfig.app.json",
+    "api:start": "node carrix-backend/dist/apps/api/main.js",
+    "worker:dev": "ts-node-dev --respawn --project carrix-backend/apps/worker/tsconfig.app.json --require tsconfig-paths/register carrix-backend/apps/worker/src/main.ts",
+    "worker:build": "tsc -p carrix-backend/apps/worker/tsconfig.app.json",
+    "worker:start": "node carrix-backend/dist/apps/worker/main.js",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
     "prisma:migrate": "prisma migrate dev",
@@ -16,27 +22,41 @@
     "seed": "prisma db seed"
   },
   "dependencies": {
+    "@nestjs/common": "11.1.11",
+    "@nestjs/config": "4.0.0",
+    "@nestjs/core": "11.1.11",
+    "@nestjs/platform-express": "11.1.11",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^3.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
     "next": "^16.1.1",
+    "next-auth": "^5.0.0-beta.21",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
+    "reflect-metadata": "0.2.2",
+    "rxjs": "7.8.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
+    "@nestjs/cli": "11.0.14",
+    "@nestjs/schematics": "11.0.9",
+    "@nestjs/testing": "11.1.11",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "^16.1.1",
-    "ts-node": "^10.9.2",
     "prisma": "^5.22.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
   },
   "prisma": {
