--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
     "api:dev": "ts-node-dev --respawn --project carrix-backend/apps/api/tsconfig.app.json --require tsconfig-paths/register carrix-backend/apps/api/src/main.ts",
