--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.552.0",
     "next": "^16.1.1",
     "next-auth": "^5.0.0-beta.21",
+    "openai": "^4.104.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
