--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.552.0",
     "next": "^16.1.1",
     "next-auth": "^5.0.0-beta.21",
+    "nodemailer": "^7.0.12",
     "openai": "^4.104.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -49,6 +50,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.9.14",
