--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "clsx": "^2.1.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.552.0",
     "next": "^16.1.1",
     "next-auth": "^5.0.0-beta.21",
     "nodemailer": "^7.0.12",
     "openai": "^4.104.0",
+    "pdf-parse": "^2.4.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
