--- a/carrix-backend/docker-compose.yml
+++ b/carrix-backend/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   api:
     image: node:20
@@ -9,8 +7,15 @@ services:
     command: npm run api:dev
     env_file:
       - ../.env
+    environment:
+      LOCAL_REDIS_URL: redis://redis:6379
+      REDIS_URL: redis://redis:6379
+      QDRANT_URL: http://qdrant:6333
     ports:
       - "4000:4000"
+    depends_on:
+      - redis
+      - qdrant
 
   worker:
     image: node:20
@@ -20,3 +25,33 @@ services:
     command: npm run worker:dev
     env_file:
       - ../.env
+    environment:
+      LOCAL_REDIS_URL: redis://redis:6379
+      REDIS_URL: redis://redis:6379
+      QDRANT_URL: http://qdrant:6333
+    depends_on:
+      - redis
+      - qdrant
+
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: qdrant-dev
+    restart: unless-stopped
+    ports:
+      - "6333:6333"  # REST
+      - "6334:6334"  # gRPC
+    volumes:
+      - qdrant_data:/qdrant/storage
+    environment:
+      # Leave empty to disable auth locally; set to a value to require an API key.
+      # QDRANT__SERVICE__API_KEY: dev-secret-key
+      QDRANT__SERVICE__GRPC_PORT: 6334
+
+  redis:
+    image: redis:7-alpine
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+
+volumes:
+  qdrant_data:
