--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@nestjs/core": "11.1.11",
     "@nestjs/platform-express": "11.1.11",
     "@prisma/client": "^5.22.0",
+    "@qdrant/js-client-rest": "^1.16.2",
     "bcryptjs": "^3.0.3",
+    "bullmq": "^5.67.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "clsx": "^2.1.1",
+    "ioredis": "^5.9.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.552.0",
     "next": "^16.1.1",
